namespace MyEnum
{
    public enum KeyState
    {
        Up,
        Down,
        Hold
    }

    public enum ItemType
    {
        HaruWeapon,
        HeadGear,
        ShoulderGear,
        BodyGear,
        LegGear,
        End
    }

    public enum AbilityType
    {
        Attack,
        Defense,
        End
    }

    public enum PlayerState
    {
        Idle,
        Run,
        Dash,
        Jump,
        DashJump,
        Land,
        DashLand,
        NormalAttack1,
        NormalAttack2,
        NormalAttack3,
        NormalAttack4,
        NormalAttack5,
        End
    }

    public enum AsphaltGolemState
    {
        Idle,
        Run,
        DMG_L,
        DMG_R,
        Death,
        A_Skill_01,
        A_Skill_02,
        A_Skill_03,
        End
    }
}